AtendimentoMedico
codigo base finalizado